packages/optimizer/core/src/snapshots/qwik_core__test__inline_jsx_keys_count_stripped_event_handlers.snap
---
source: packages/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$ } from '@qwik.dev/core';
import { render } from './x';

export const Cmp = component$(() => {
	return <button onClick$={() => render(<div />)} />;
});

export const Cmp2 = component$(() => <p />);

============================= test.tsx_Cmp_component_button_q_e_click_0O0tA6ahzDQ.js (ENTRY POINT)==

export const Cmp_component_button_q_e_click_0O0tA6ahzDQ = null;


Some("{\"version\":3,\"sources\":[],\"names\":[],\"mappings\":\"\"}")
/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_button_q_e_click_0O0tA6ahzDQ",
  "entry": null,
  "displayName": "test.tsx_Cmp_component_button_q_e_click",
  "hash": "0O0tA6ahzDQ",
  "canonicalFilename": "test.tsx_Cmp_component_button_q_e_click_0O0tA6ahzDQ",
  "path": "",
  "extension": "js",
  "parent": "Cmp_component_4ryKJTOKjWE",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.js ==

import "./x";
import { componentQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _noopQrl } from "@qwik.dev/core";
//
const q_Cmp2_component_FnOz26iMYaM = /*#__PURE__*/ _noopQrl("Cmp2_component_FnOz26iMYaM");
const q_Cmp_component_4ryKJTOKjWE = /*#__PURE__*/ _noopQrl("Cmp_component_4ryKJTOKjWE");
const q_qrl_4294901760 = /*#__PURE__*/ _noopQrl("Cmp_component_button_q_e_click_0O0tA6ahzDQ");
//
q_Cmp_component_4ryKJTOKjWE.s(()=>{
    return /*#__PURE__*/ _jsxSorted("button", null, {
        "q-e:click": q_qrl_4294901760
    }, null, 3, "u6_1");
});
q_Cmp2_component_FnOz26iMYaM.s(()=>/*#__PURE__*/ _jsxSorted("p", null, null, null, 3, "u6_2"));
export const Cmp = /*#__PURE__*/ componentQrl(q_Cmp_component_4ryKJTOKjWE);
export const Cmp2 = /*#__PURE__*/ componentQrl(q_Cmp2_component_FnOz26iMYaM);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;;8BAI8B;IAC7B,qBAAO,WAAC;QAAO,WAAQ;;AACxB;+BAE+B,kBAAM,WAAC;AAJtC,OAAO,MAAM,oBAAM,0CAEhB;AAEH,OAAO,MAAM,qBAAO,2CAAwB\"}")
== DIAGNOSTICS ==

[]
