packages/optimizer/core/src/snapshots/qwik_core__test__inline_jsx_keys_follow_source_order_across_components.snap
---
source: packages/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { $, component$ } from '@qwik.dev/core';
import { render } from './x';

export const Cmp = component$(() => {
	const view = $(() => render(<div />));
	return <button onClick$={view} />;
});

export const Cmp2 = component$(() => {
	const view = $(() => render(<p><span /></p>));
	return <button onClick$={view} />;
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _noopQrl } from "@qwik.dev/core";
import { render } from './x';
//
const q_Cmp2_component_FnOz26iMYaM = /*#__PURE__*/ _noopQrl("Cmp2_component_FnOz26iMYaM");
const q_Cmp2_component_view_oOQYv4bRV7U = /*#__PURE__*/ _noopQrl("Cmp2_component_view_oOQYv4bRV7U");
const q_Cmp_component_4ryKJTOKjWE = /*#__PURE__*/ _noopQrl("Cmp_component_4ryKJTOKjWE");
const q_Cmp_component_view_ITAz7Hgj10g = /*#__PURE__*/ _noopQrl("Cmp_component_view_ITAz7Hgj10g");
//
q_Cmp_component_view_ITAz7Hgj10g.s(()=>render(/*#__PURE__*/ _jsxSorted("div", null, null, null, 3, "u6_0")));
q_Cmp_component_4ryKJTOKjWE.s(()=>{
    const view = q_Cmp_component_view_ITAz7Hgj10g;
    return /*#__PURE__*/ _jsxSorted("button", null, {
        "q-e:click": view
    }, null, 3, "u6_1");
});
q_Cmp2_component_view_oOQYv4bRV7U.s(()=>render(/*#__PURE__*/ _jsxSorted("p", null, null, /*#__PURE__*/ _jsxSorted("span", null, null, null, 3, null), 3, "u6_2")));
q_Cmp2_component_FnOz26iMYaM.s(()=>{
    const view = q_Cmp2_component_view_oOQYv4bRV7U;
    return /*#__PURE__*/ _jsxSorted("button", null, {
        "q-e:click": view
    }, null, 3, "u6_3");
});
export const Cmp = /*#__PURE__*/ componentQrl(q_Cmp_component_4ryKJTOKjWE);
export const Cmp2 = /*#__PURE__*/ componentQrl(q_Cmp2_component_FnOz26iMYaM);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;AAEA,SAAS,MAAM,QAAQ,MAAM;;;;;;;mCAGb,IAAM,qBAAO,WAAC;8BADA;IAC7B,MAAM;IACN,qBAAO,WAAC;QAAO,aAAU;;AAC1B;oCAGgB,IAAM,qBAAO,WAAC,+BAAE,WAAC;+BADF;IAC9B,MAAM;IACN,qBAAO,WAAC;QAAO,aAAU;;AAC1B;AARA,OAAO,MAAM,oBAAM,0CAGhB;AAEH,OAAO,MAAM,qBAAO,2CAGjB\"}")
== DIAGNOSTICS ==

[]
