packages/optimizer/core/src/snapshots/qwik_core__test__issue_150.snap
---
source: packages/optimizer/core/src/test.rs
assertion_line: 1982
expression: output
---
==INPUT==


import { component$, $ } from '@qwik.dev/core';
import { hola } from 'sdfds';

export const Greeter = component$(() => {
	const stuff = useStore();
	return $(() => {
		return (
			<div
				class={{
					'foo': true,
					'bar': stuff.condition,
					'baz': hola ? 'true' : 'false',
				}}
			/>
		)
	});
});

const d = $(()=>console.log('thing'));

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_Greeter_component_n7HuG2hhU0Q = /*#__PURE__*/ qrl(()=>import("./test.tsx_Greeter_component_n7HuG2hhU0Q"), "Greeter_component_n7HuG2hhU0Q");
//
/*#__PURE__*/ qrl(()=>import("./test.tsx_d_wKNFJEIQVUA"), "d_wKNFJEIQVUA");
export const Greeter = /*#__PURE__*/ componentQrl(q_Greeter_component_n7HuG2hhU0Q);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;AAIA,OAAO,MAAM,wBAAU,8CAapB\"}")
============================= test.tsx_d_wKNFJEIQVUA.js (ENTRY POINT)==

export const d_wKNFJEIQVUA = ()=>console.log('thing');


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"6BAmBY,IAAI,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "d_wKNFJEIQVUA",
  "entry": null,
  "displayName": "test.tsx_d",
  "hash": "wKNFJEIQVUA",
  "canonicalFilename": "test.tsx_d_wKNFJEIQVUA",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    323,
    347
  ]
}
*/
============================= test.tsx_Greeter_component_1_krCndSwhX4U.js (ENTRY POINT)==

import { _capturesObj } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { hola } from "sdfds";
//
export const Greeter_component_1_krCndSwhX4U = ()=>{
    let stuff = _capturesObj._[0];
    return /*#__PURE__*/ _jsxSorted("div", {
        class: {
            'foo': true,
            'bar': stuff.condition,
            'baz': hola ? 'true' : 'false'
        }
    }, null, null, 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;+CAMU;;IACR,qBACC,WAAC;QACA,OAAO;YACN,OAAO;YACP,OAAO,MAAM,SAAS;YACtB,OAAO,OAAO,SAAS;QACxB\"}")
/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_1_krCndSwhX4U",
  "entry": null,
  "displayName": "test.tsx_Greeter_component_1",
  "hash": "krCndSwhX4U",
  "canonicalFilename": "test.tsx_Greeter_component_1_krCndSwhX4U",
  "path": "",
  "extension": "js",
  "parent": "Greeter_component_n7HuG2hhU0Q",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "loc": [
    160,
    303
  ],
  "captureNames": [
    "stuff"
  ]
}
*/
============================= test.tsx_Greeter_component_n7HuG2hhU0Q.js (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
//
const q_Greeter_component_1_krCndSwhX4U = /*#__PURE__*/ qrl(()=>import("./test.tsx_Greeter_component_1_krCndSwhX4U"), "Greeter_component_1_krCndSwhX4U");
//
export const Greeter_component_n7HuG2hhU0Q = ()=>{
    const stuff = useStore();
    return q_Greeter_component_1_krCndSwhX4U.w([
        stuff
    ]);
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;6CAIkC;IACjC,MAAM,QAAQ;IACd;;;AAWD\"}")
/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_n7HuG2hhU0Q",
  "entry": null,
  "displayName": "test.tsx_Greeter_component",
  "hash": "n7HuG2hhU0Q",
  "canonicalFilename": "test.tsx_Greeter_component_n7HuG2hhU0Q",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    115,
    307
  ]
}
*/
== DIAGNOSTICS ==

[]
